[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/ui/station_menu/trade_interface.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=2]

[node name="TradeInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.7 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -300.0
margin_right = 450.0
margin_bottom = 300.0

[node name="VBoxMain" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_constants/separation = 10

[node name="HBoxHeader" type="HBoxContainer" parent="Panel/VBoxMain"]
margin_right = 870.0
margin_bottom = 27.0

[node name="LabelTitle" type="Label" parent="Panel/VBoxMain/HBoxHeader"]
margin_right = 107.0
margin_bottom = 27.0
text = "MARKET"

[node name="Control" type="Control" parent="Panel/VBoxMain/HBoxHeader"]
margin_left = 111.0
margin_right = 660.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="LabelCredits" type="Label" parent="Panel/VBoxMain/HBoxHeader"]
margin_left = 664.0
margin_right = 870.0
margin_bottom = 27.0
text = "Wealth Points: 0 WP"
align = 2

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxMain"]
margin_top = 37.0
margin_right = 870.0
margin_bottom = 41.0

[node name="HBoxContent" type="HBoxContainer" parent="Panel/VBoxMain"]
margin_top = 51.0
margin_right = 870.0
margin_bottom = 451.0
size_flags_vertical = 3
custom_constants/separation = 15

[node name="VBoxStation" type="VBoxContainer" parent="Panel/VBoxMain/HBoxContent"]
margin_right = 280.0
margin_bottom = 400.0
size_flags_horizontal = 3

[node name="LabelStation" type="Label" parent="Panel/VBoxMain/HBoxContent/VBoxStation"]
margin_right = 280.0
margin_bottom = 27.0
text = "Station Inventory"
align = 1

[node name="ItemListStation" type="ItemList" parent="Panel/VBoxMain/HBoxContent/VBoxStation"]
margin_top = 31.0
margin_right = 280.0
margin_bottom = 400.0
size_flags_vertical = 3

[node name="VBoxPlayer" type="VBoxContainer" parent="Panel/VBoxMain/HBoxContent"]
margin_left = 295.0
margin_right = 575.0
margin_bottom = 400.0
size_flags_horizontal = 3

[node name="LabelPlayer" type="Label" parent="Panel/VBoxMain/HBoxContent/VBoxPlayer"]
margin_right = 280.0
margin_bottom = 27.0
text = "Your Cargo"
align = 1

[node name="ItemListPlayer" type="ItemList" parent="Panel/VBoxMain/HBoxContent/VBoxPlayer"]
margin_top = 31.0
margin_right = 280.0
margin_bottom = 400.0
size_flags_vertical = 3

[node name="VBoxInfo" type="VBoxContainer" parent="Panel/VBoxMain/HBoxContent"]
margin_left = 590.0
margin_right = 870.0
margin_bottom = 400.0
size_flags_horizontal = 3

[node name="LabelInfoTitle" type="Label" parent="Panel/VBoxMain/HBoxContent/VBoxInfo"]
margin_right = 280.0
margin_bottom = 27.0
text = "Price Comparison"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxMain/HBoxContent/VBoxInfo"]
margin_top = 31.0
margin_right = 280.0
margin_bottom = 400.0
size_flags_vertical = 3

[node name="RichTextLabelPrices" type="RichTextLabel" parent="Panel/VBoxMain/HBoxContent/VBoxInfo/ScrollContainer"]
margin_right = 280.0
margin_bottom = 369.0
rect_min_size = Vector2( 280, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Select an item to see prices at all stations."

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxMain"]
margin_top = 461.0
margin_right = 870.0
margin_bottom = 465.0

[node name="HBoxControls" type="HBoxContainer" parent="Panel/VBoxMain"]
margin_top = 475.0
margin_right = 870.0
margin_bottom = 545.0
rect_min_size = Vector2( 0, 70 )
custom_constants/separation = 20
alignment = 1

[node name="BtnBuy" type="Button" parent="Panel/VBoxMain/HBoxControls"]
margin_left = 265.0
margin_right = 385.0
margin_bottom = 70.0
rect_min_size = Vector2( 120, 50 )
disabled = true
text = "BUY"

[node name="BtnSell" type="Button" parent="Panel/VBoxMain/HBoxControls"]
margin_left = 405.0
margin_right = 525.0
margin_bottom = 70.0
rect_min_size = Vector2( 120, 50 )
disabled = true
text = "SELL"

[node name="SpinQuantity" type="SpinBox" parent="Panel/VBoxMain/HBoxControls"]
margin_left = 545.0
margin_right = 675.0
margin_bottom = 70.0
rect_min_size = Vector2( 130, 50 )
min_value = 1.0
max_value = 1.0
step = 1.0
value = 1.0
editable = false
prefix = "Qty: "

[node name="BtnClose" type="Button" parent="Panel/VBoxMain/HBoxControls"]
margin_left = 695.0
margin_right = 755.0
margin_bottom = 70.0
rect_min_size = Vector2( 60, 50 )
text = "X"

[node name="LabelStatus" type="Label" parent="Panel/VBoxMain"]
margin_top = 555.0
margin_right = 870.0
margin_bottom = 570.0
custom_colors/font_color = Color( 0.8, 0.8, 0.5, 1 )
text = "Select an item to trade"
align = 1
